# fluctuation-theorem-perps

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
analysis/: strategy_analysis.py  validation.py  visualizations.py
config/: settings.py
data/: schemas.py
data/collectors/: binance.py
data/storage/: db.py
paper/: outline.md
scripts/: collect_data.py  run_analysis.py
strategy/: backtest.py  backtest_v2.py  regime.py  signals.py
theory/: crooks.py  entropy_production.py  jarzynski.py  market_temperature.py  synthetic.py  thermodynamic_quantities.py
