[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fluctuation-theorem-perps"
version = "0.1.0"
description = "Non-equilibrium thermodynamics of cryptocurrency perpetual futures"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "duckdb>=1.1",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "statsmodels>=0.14",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "rich>=13.7",
    "typer>=0.12",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["config", "data", "theory", "strategy", "analysis", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
